@@ -1,3 +1,7 @@
+2002-12-31    John E. Joganic <john@joganic.com>
+
+	* Added Ping Cheng's new tool IDs.
+
 2002-12-26    John E. Joganic <john@joganic.com>
 
 	* Fixed tablet initialization
